--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <script src="JS/main.js" type="text/javascript">
         </script>
         <script>
-        if ('serviceWorker' in navigator) {
+        if ('service-worker' in navigator) {
             window.addEventListener('load', function() {
                 navigator.serviceWorker.register('serviceWorker.js');
             });
