--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <script>
         if ('service-worker' in navigator) {
             window.addEventListener('load', function() {
-                navigator.serviceWorker.register('serviceWorker.js');
+                navigator.serviceWorker.register('service-worker.js');
             });
         }
 </script>
